<resources>
    <!-- Desconocido -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <!-- Comunes -->
    <string name="app_name">Producto_AplicacionesMoviles</string>
    <string name="uns">@uns</string>
    <!-- LOGIN -->
    <string name="hospital_nombre">SAN IGNACIO DE CASMA</string>
    <string name="hospital_tipo">Hospital de Apoyo</string>
    <string name="app_titulo">SAN IGNACIO APP</string>
    <string name="app_descripcion">Una aplicacion para la gestión de reservas de consultas médicas</string>
    <string name="title_activity_app">AppActivity</string>

    <!-- HOME -->
    <string name="home_title">¡Bienvenido!</string>
    <string name="home_description">Aquí encontrara lo necesario para gestionar sus consultas médicas separando su cita con el doctor de su preferencia.</string>
    <string name="home_section_01">Consultas</string>
    <string name="home_section_02">Personal</string>
    <string name="home_section_03">Extra</string>

    <string name="home_card_01_01_title">Crear Consulta</string>
    <string name="home_card_01_01_description">Crear o administrar consultas</string>

    <string name="home_card_01_02_title">Registro de Consultas</string>
    <string name="home_card_01_02_description">Listado de consultas anteriores</string>

    <string name="home_card_02_01_title">Doctores</string>
    <string name="home_card_02_01_description">Vea la lista de doctores y su horario de atencion</string>

    <string name="home_card_03_01_title">Medicamentos</string>
    <string name="home_card_03_01_description">Crear o administrar consultas</string>

    <string name="home_card_03_02_title">Acerca de</string>
    <string name="home_card_03_02_description">Informacion sobre el centro de salud</string>

    <!-- _______________ -->

    <!-- SPECIALITY -->
    <string name="speciality_title">¡Doctores!</string>
    <string name="speciality_description">Selecciones una especialidad para mostrar los doctores respectivos.</string>
    <string name="speciality_section_01">Especialidades</string>


    <!-- _______________ -->
    <string name="lorem">Lorem ipsum es el texto que se usa habitualmente en diseño gráfico en demostraciones de tipografías o de borradores de diseño para probar el diseño visual antes de insertar el texto final. Wikipedia
</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="text_ver_mas">ver mas</string>
    <string name="label_nombreCompleto">Nombre Completo</string>
    <string name="label_tiempoLaborando">Tiempo Laborando</string>
    <string name="label_grado">Grado</string>
    <string name="label_estudios">Estudios</string>
    <string name="label_descripcion">Descripcion</string>
    <string name="label_horarios_de_atencion">Horarios de Atencion</string>
    <string name="label_recervar_cita">Recervar Cita</string>
    <string name="About_title">Acerca del Hospital</string>
    <string name="label_Ubicacion">Ubicacion</string>
    <string name="direccionHospital">AV. GARCILAZO DE LA VEGA NRO. 658 CASCO URBANO ANCASH - CASMA - CASMA</string>
    <string name="label_uns">UNS</string>
    <string name="label_nombre">Nombre</string>
    <string name="label_tipoDocumento">Tipo de codumento</string>
    <string name="label_numeroDocumento">Numero de documento</string>
    <string name="label_correoElectronico">Correo Electronico</string>
    <string name="label_genero">Genero</string>
    <string name="label_rol">Rol</string>
    <string name="label_imagenDePerfil">Imagen de perfil</string>
    <string name="label_opciones">Opciones</string>
    <string name="label_cerrar_sesion">Cerrar sesion</string>
    <string name="consultaHistory_title">¡Mis Consultas!</string>
    <string name="consultaHisitory_description">Un listado de tus consultas hechas en este hospital mediante la aplicacion movil</string>
    <string name="consultaHistory_section01">Consults Pendientes</string>
    <string name="consultaHistory_section02">Consultas Finalizadas</string>
    <string name="crear_consulta_title">¡Crear Consulta!</string>
    <string name="crear_consulta_description">Recerve su cita medica llenando los datos correspondientes en el formulario</string>
    <string name="label_especialidad">Especialidad</string>
    <string name="mision">Promover el acceso a una atención integral de salud con calidad y calidez, brindando soporte técnico, administrativo y asistencial a las áreas de nuestro ámbito, priorizando a los estratos de pobreza y extrema pobreza con la participación de la población, instituciones y comunidad organizada en la construcción de entornos saludables</string>
    <string name="label_mision">Mision</string>
    <string name="label_vision">Vision</string>
    <string name="vision">Ser la institución médica líder de la red de salud pacifico sur, con una población sana y con entorno de vida saludables, respondiendo con eficacia y eficiencia los requerimientos de nuestros usuarios internos y externos</string>
    <string name="num_telefono_hospital">(043) 411299</string>
    <string name="label_telefono">Telefono</string>
    <string name="label_medico">Medico</string>
    <string name="label_siguiente">Siguiente</string>
    <string name="label_horario">Horario</string>
    <string name="label_horario_atencion">Horario de Atencion</string>
    <string name="label_fecha">Fecha</string>
</resources>