<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.views.consultas.ConsultaCreateFragment">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="20dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/crear_consulta_title"
                    android:textColor="#252525"
                    android:textSize="32sp" />

                <ImageView
                    android:layout_width="44dp"
                    android:layout_height="44dp"
                    android:layout_marginStart="8dp"
                    android:src="@drawable/ic_icon_libreta_add" />


            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/crear_consulta_description"
                android:textColor="#515151"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="15dp"
                android:text="@string/label_especialidad"
                android:textColor="#363636"
                android:textSize="16sp" />

<!--            <Spinner-->
<!--                android:id="@+id/spinnerEspecialidad"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:spinnerMode="dialog"-->
<!--                />-->

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                >
                <AutoCompleteTextView

                    android:id="@+id/autocomleteEspecialidad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Especialidad"
                    android:inputType="none"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="15dp"
                android:text="@string/label_medico"
                android:textColor="#363636"
                android:textSize="16sp" />
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <AutoCompleteTextView

                    android:id="@+id/autocomleteDoctores"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Doctor"
                    android:inputType="none"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="15dp"
                android:text="@string/label_fecha"
                android:textColor="#363636"
                android:textSize="16sp"

                />
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/label_fecha"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/eDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:focusable="false"
                    />

            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="15dp"
                android:text="@string/label_horario"
                android:textColor="#363636"
                android:textSize="16sp" />
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <AutoCompleteTextView

                    android:id="@+id/autocomleteHorario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/label_horario_atencion"
                    android:inputType="none"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <Button
                android:id="@+id/btn_siguiente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginVertical="40dp"
                android:layout_marginHorizontal="60dp"

                android:backgroundTint="#0CA34F"
                android:padding="16dp"
                android:text="@string/label_siguiente"
                android:textAllCaps="false"
                android:textSize="16sp"
                app:cornerRadius="12dp"
                tools:ignore="TextContrastCheck" />

        </LinearLayout>


    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>