<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.views.home.AboutFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_About"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="8dp"
                android:importantForAccessibility="no"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/ic_icon_hospital_2" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_SpecialtyDoctorTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#252525"
                    android:textSize="32sp"
                    android:text="@string/About_title"
                   />

                <TextView
                    android:id="@+id/tv_HospitalState"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="8dp"
                    android:textColor="#5E5E5E"
                    android:textSize="12sp"
                    app:drawableStartCompat="@drawable/circle_success"
                    app:layout_constraintStart_toStartOf="@id/tv_name"
                    app:layout_constraintTop_toBottomOf="@id/tv_name"
                    android:text="Disponible" />

            </LinearLayout>

        </LinearLayout>
        <TextView
            android:id="@+id/titpoHospital"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hospital_tipo"
            android:textSize="16sp"
            android:textColor="#252525"

            />
            <TextView
                android:id="@+id/nombreHospital"
                android:layout_width="match_parent"
                android:textSize="24sp"
                android:textColor="#252525"
                android:layout_height="wrap_content"
                android:text="@string/hospital_nombre"
                />

    </LinearLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:src="@drawable/imagen_hospital"
        android:scaleType="centerCrop"
        />
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <fragment
        android:id="@+id/aboutMap"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:name="com.google.android.gms.maps.SupportMapFragment"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:background="#92FFFFFF"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_icon_ubication"
            android:drawablePadding="4dp"
            android:gravity="center_vertical"
            android:textSize="16sp"
            android:textColor="#252525"
            android:text="@string/label_Ubicacion"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="#252525"
            android:paddingHorizontal="16dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/direccionHospital"/>

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>



</LinearLayout>